--- a/js8.4.html
+++ b/js8.4.html
@@ -1,15 +1,10 @@
 <script>
 
-N=prompt("veuillez entrer le chiffre 5")
-X=prompt("veuillez entrer le chiffre 7")
+let n = parseInt(prompt("Entrez le nombre de multiples:"));
+let x = parseInt(prompt("Entrez un nombre entier:"));
 
-if(N!=5 && X!=7){
-        alert("veuillez entrer un chiffre correct!!")
+for(i=1; i<=n; i++){
+  console.log(`${i} * ${x} = ${i*x}`);
 }
-else{
 
-    for(N =1;N<=5;N++)
-    console.log("les multiples du chiffre sont:" + X + "x" + N )
-}
-    
-</script>
+</Script>
