--- a/js8.4.html
+++ b/js8.4.html
@@ -1,7 +1,7 @@
 <script>
 
-let n = parseInt(prompt("Entrez le nombre de multiples:"));
-let x = parseInt(prompt("Entrez un nombre entier:"));
+n = parseInt(prompt("Entrez le nombre de multiples:"));
+x = parseInt(prompt("Entrez un nombre entier:"));
 
 for(i=1; i<=n; i++){
   console.log(`${i} * ${x} = ${i*x}`);
